# thermal_printer

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  printer_ctrl.c  printer_heat.c  printer_moto.c
include/: printer_ctrl.h  printer_heat.h  printer_moto.h  printer_pins.h  test_img.h
tools/: convert_img.py
